# 0-trust-ai-agents-implementation

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  todo.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-18-f02-zta-identity.md  2026-06-18-f04-zta-audit.md  2026-06-18-f05-zta-tools.md  2026-06-18-f07-fastapi-skeleton.md  2026-06-18-f08-openai-integration.md  2026-06-18-f09-jinja-chat-ui.md  2026-06-18-f10-audit-ui.md  2026-06-18-zero-trust-ai-agents.md  2026-06-29-rbac-users.md
docs/superpowers/specs/: 2026-06-18-langchain-openai-swap-design.md  2026-06-18-modern-ui-design.md  2026-06-18-zta-mvp-design.md  2026-06-29-rbac-users-design.md
examples/: seed_db.py
static/: app.js  style.css
templates/: audit.html  base.html  chat.html  policy.html  roles.html  users.html
tests/: conftest.py  test_agent_graph.py  test_app.py  test_audit.py  test_identity.py  test_import.py  test_runtime.py  test_tools.py  test_users.py
zta/: __init__.py  agent_graph.py  audit.py  errors.py  identity.py  rbac.py  runtime.py  tools.py  users.py
