[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "zta"
version = "0.1.0"
description = "Zero Trust control plane for AI agents (MVP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Zero Trust AI Agents" }]
keywords = ["zero-trust", "ai-agents", "security"]

dependencies = [
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "argon2-cffi>=23.1",
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "langchain-openai>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "respx>=0.21",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["zta"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["zta", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "UP", "N", "S", "C4", "RET", "SIM", "TID", "PT", "RUF",
]
ignore = ["S101", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N", "B008", "B017"]
"zta/policy.py" = ["UP042"]  # Decision(str, Enum) is per spec; use StrEnum in v2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "zta"

[[tool.mypy.overrides]]
module = ["docker.*", "boto3.*", "botocore.*", "structlog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "app"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["zta"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
